--- a/проект 11-источник-мастер/CSS/style.css
+++ b/проект 11-источник-мастер/CSS/style.css
@@ -116,3 +116,14 @@ a {
     background-color: #3333ff;
     color:white;
 }
+/*Разделение на блоки страница popular */
+.col{
+    display:flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+.row{
+    display:flex;
+    justify-content: space-around;
+    padding: 10px;
+}
